Setting up code to run a command on behalf of the bot.

--- a/Projects/SlackReceiver.Web/web.config
+++ b/Projects/SlackReceiver.Web/web.config
@@ -5,7 +5,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="exec &quot;D:\Projects\_PERSONAL_PROJECTS_\slackreceiver\Projects\SlackReceiver.Web\bin\Debug\netcoreapp2.2\SlackReceiver.Web.dll&quot;" stdoutLogEnabled="false" hostingModel="InProcess" />
+      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="exec &quot;D:\Projects\_PERSONAL_PROJECTS_\slackreceiver\Projects\SlackReceiver.Web\bin\Debug\netcoreapp2.2\SlackReceiver.Web.dll&quot;" stdoutLogEnabled="false" hostingModel="InProcess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
+        </environmentVariables>
+      </aspNetCore>
     </system.webServer>
   </location>
 </configuration>
