--- a/Projects/SlackReceiver.Web/SlackReceiver.Web.csproj
+++ b/Projects/SlackReceiver.Web/SlackReceiver.Web.csproj
@@ -8,6 +8,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.PowerShell.Commands.Diagnostics" Version="6.1.2" />
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="6.1.2" />
+    <PackageReference Include="Microsoft.WSMan.Management" Version="6.1.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.0" />
   </ItemGroup>
 
