Added appsettings and ps running code.

--- a/Projects/SlackReceiver.Web/appsettings.json
+++ b/Projects/SlackReceiver.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "RunTimeoutInSeconds": 27,
+    "BaseBotDirectory": "c:\\BotDir"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
