--- a/Projects/SlackReceiver.Web/web.config
+++ b/Projects/SlackReceiver.Web/web.config
@@ -5,9 +5,10 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="false" hostingModel="InProcess" arguments="%LAUNCHER_ARGS%">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
